# ThinGlViewer

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ColorFragmentShader120.fragmentshader  thinglViewerPointCloud.cpp  thinglViewerSampleSimple.cpp
examples/PointCloudViewer/: CMakeLists.txt
examples/PointCloudViewer/src/: ThinglPointcloudViewer.cpp  ThinglPointcloudViewer.h  main.cpp
examples/PointCloudViewer/src/shaders/: TransformVertexShader120.vertexshader
include/: ThinGLViewer.h  ThinGlViewer.h  ThinglPointcloudViewer.h  ThinglViewer.h
src/: SimpleTransform330.vertexshader  SingleColor330.fragmentshader  ThinGlViewer.cpp  ThinglViewer.cpp  controls.cpp  shader.cpp  shader.hpp  thinGLViewerSample.cpp
src/viewers/: ColorFragmentShader330.fragmentshader  ThinglPointcloudViewer.cpp  TransformVertexShader120.vertexshader
